QueryForm and QuerySettings cleanup
QueryForm is no longer a FormData
QueryForm and QuerySettings no longer call request.getParameter()